--- a/Index.html
+++ b/Index.html
@@ -79,7 +79,7 @@
 
         .middle-home {
             width: 45vw;
-            min-height: 100vh;
+            min-height: auto;
             margin: 25px 20px;
         }
 
@@ -170,7 +170,7 @@
         }
         .middle2a {
             width: 100%;
-            height: 570px;
+            height: auto;
             background-color: white;
             border-radius: 10px;
             margin: 15px 0;
@@ -428,6 +428,15 @@
             .right-home{
                 display: none;
             }
+
+
+            .right2-2{
+      height:200px;
+      background-color: antiquewhite;
+      position: sticky;
+      top: 310px;
+    }
+
         }
         @media(max-width:800px){
             .blocks{
@@ -525,7 +534,7 @@
                     <p style="font-size: 20px; font-weight: 600; margin-bottom: 0;">Aarthi devi</p>
                     <p style="font-size: 12px; margin: 0;">NSS MEMBER ||Electrical engineering || HTML || PYTHON...</p>
                     <p class="city">Hyderabad, Telangana</p>
-                    <div class="d-flex justify-content-center align-items-center gap-1">
+                    <div class="d-flex justify-content-center align-items-center gap-1 height:auto">
                         <img style="margin-bottom: 15px;"" src="SNIST-logo.jpeg" width="25px" alt="">
                         <p style="font-size: 11px; font-weight: 600;">Sreenidhi Institute of Science and Technology</p>
                     </div>
@@ -848,6 +857,41 @@
             </div>
         </div>
     </div>
+
+
+
+    <div class="right2-2 p-3">
+        <div class="text-secondary text-center">
+          <a href="" style="font-size: 12px;color: gray;margin-right: 5px;">About</a>
+          <a href="" style="font-size: 12px;color: gray;margin-right: 5px;">Accessinility</a>
+          <a href="" style="font-size: 12px;color: gray;margin-right: 5px;">Help Center</a>
+          <div class="dropdown">
+            <button class="rfs btn dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+              <a href="" style="font-size: 12px;color: gray;">Privacy & Terms</a>
+            </button>
+          </div>
+          <a href="" style="font-size: 12px;color: gray;margin-right: 5px;">Ad Choices</a>
+          <a href="" style="font-size: 12px;color: gray;margin-right: 5px;">Advertising</a>
+          <div class="dropdown">
+            <button class="rfs btn dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+              <a href="" style="font-size: 12px;color: gray;">Business Services</a>
+            </button>
+          </div>
+          <a href="" style="font-size: 12px;color: gray;margin-right: 5px;">Get the Linkedin app</a>
+          <a href="" style="font-size: 12px;color: gray;margin-right: 5px;">More</a>
+        </div>
+        <div class="d-flex justify-content-center align-items-center gap-1 mt-3">
+          <div class="d-flex justify-content-center align-items-center">
+            <b style="color: rgb(10, 118, 249);font-size:14px;margin-right: 1px">Linked</b>
+            <i class="fa-brands fa-linkedin text-primary"></i>
+          </div>
+          <p style="font-size: 12px;color: rgb(0, 0, 0);margin: 0;">Linkedin Corporation © 2025</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
